src/test/compile-fail/block-must-not-have-result-res.rs
// error-pattern:this block must not have a result

resource r(i: int) {
    true
}

fn main() {
}